--- a/.env.railway
+++ b/.env.railway
@@ -6,7 +6,7 @@ HEADLESS_MODE=true
 PORT=3000
 
 # Performance optimizations
-NODE_OPTIONS="--max-old-space-size=1024"
+NODE_OPTIONS="--max-old-space-size=1024 --experimental-global-webcrypto"
 NPM_CONFIG_AUDIT=false
 NPM_CONFIG_FUND=false
 NPM_CONFIG_UPDATE_NOTIFIER=false
