--- a/package.json
+++ b/package.json
@@ -5,13 +5,13 @@
   "main": "src/server.js",
   "type": "module",
   "scripts": {
-    "start": "node src/server.js",
+    "start": "node start.js",
     "dev": "nodemon src/server.js",
     "postinstall": "echo 'Dependencies installed successfully'"
   },
   "dependencies": {
     "express": "^4.18.2",
-    "puppeteer": "^21.5.2",
+    "puppeteer": "^19.11.1",
     "cheerio": "^1.0.0-rc.12",
     "cors": "^2.8.5",
     "helmet": "^7.1.0",
@@ -23,8 +23,8 @@
     "nodemon": "^3.0.2"
   },
   "engines": {
-    "node": "18.x",
-    "npm": "9.x"
+    "node": ">=20.0.0",
+    "npm": ">=9.0.0"
   },
   "keywords": [
     "google",
