🔧 Switch to Chromium and add more fallback configs for Railway
- Change from google-chrome to chromium in nixpacks.toml
- Update executable path to /usr/bin/chromium-browser
- Add two additional fallback configurations:
  1. Ultra-Minimal: Basic args only
  2. Puppeteer Default: Let Puppeteer download its own Chrome
- Should handle various Railway container limitations

--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -1,12 +1,12 @@
 [variables]
 NODE_ENV = "production"
 PUPPETEER_SKIP_CHROMIUM_DOWNLOAD = "true"
-PUPPETEER_EXECUTABLE_PATH = "/usr/bin/google-chrome-stable"
+PUPPETEER_EXECUTABLE_PATH = "/usr/bin/chromium-browser"
 
 [phases.setup]
 nixPkgs = [
     "nodejs_20",
-    "google-chrome"
+    "chromium"
 ]
 
 [phases.install]
